--- a/src/Versioning.targets
+++ b/src/Versioning.targets
@@ -13,10 +13,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);IncludeProjectReferences</TargetsForTfmSpecificBuildOutput>
-    <Authors>Aren Chen</Authors>
+    <Authors>NETCOREXT</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/arenchen/Netcorext.EntityFramework</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/arenchen/Netcorext.EntityFramework.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/NETCOREXT/Netcorext.EntityFramework</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/NETCOREXT/Netcorext.EntityFramework.git</RepositoryUrl>
     <Description>Normalized Entity Base</Description>
   </PropertyGroup>
 
