--- a/.github/workflows/deploy-nuget.yml
+++ b/.github/workflows/deploy-nuget.yml
@@ -6,25 +6,54 @@ on:
       - main
       - dev
 
-    workflow_dispatch:
-      inputs:
-        force:
-          description: 'Force exec'
-          type: boolean
-          required: true
+  workflow_dispatch:
+    inputs:
+      force:
+        description: 'Force exec'
+        type: boolean
+        required: true
 
 jobs:
+  Detect:
+    runs-on: ubuntu-latest
+    outputs:
+      app: ${{ steps.detect.outputs.app }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Detect Change
+        id: detect
+        run: |
+          APP="${GITHUB_REPOSITORY#*/}"
+
+          PROJECT_PATH=`find . -type f -iname "*.csproj" | grep -Em1 "${APP}(.API)?.csproj" || true`
+
+          if [ ! -z "$PROJECT_PATH" ]; then
+            APP=`basename "${PROJECT_PATH}" .csproj`
+          fi
+
+          CHANGE_FILES=`git diff --no-commit-id --name-only HEAD^`
+
+          CHANGED=`echo $"CHANGE_FILES" | grep -Em 1 '.cs|.proto' || true`
+          if [ -z "$CHANGED" ] && [ ! ${{ inputs.force }} ]; then
+            APP=""
+          fi
+
+          echo "app=${APP}" >> $GITHUB_OUTPUT
   Build:
+    needs: Detect
+    if: needs.Detect.outputs.app != ''
     runs-on: ubuntu-latest
     outputs:
       artifact: ${{ steps.build.outputs.artifact }}
     steps:
-      - uses: netcorext/dotnet-build-package-action@dev
+      - id: build
         name: Build Package
-        id: build
+        uses: netcorext/dotnet-build-package-action@dev
   Deploy:
-    runs-on: ubuntu-latest
     needs: Build
+    runs-on: ubuntu-latest
     steps:
       - uses: netcorext/push-nuget-package-action@dev
         name: Push Package
